[gd_scene load_steps=5 format=3 uid="uid://brayb2lavypxw"]

[ext_resource type="Script" uid="uid://c2fjay0ei0wi0" path="res://Scenes/SCHOOL.gd" id="1_h6vdc"]
[ext_resource type="Texture2D" uid="uid://bsefpdmrgt0tq" path="res://Images/BlueSky_HD2.png" id="1_vigww"]
[ext_resource type="PackedScene" uid="uid://dbmqljwa4bp7s" path="res://Scenes/Reusable/Dialogue.tscn" id="2_8ejwd"]
[ext_resource type="Texture2D" uid="uid://dvv7y62yfddqd" path="res://Images/btn2.png" id="4_o8ck7"]

[node name="School" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h6vdc")

[node name="SchoolLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="SchoolLayer"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 3.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vigww")
expand_mode = 1

[node name="MAP" type="Label" parent="SchoolLayer"]
modulate = Color(0.698938, 0.672802, 0.440498, 1)
offset_left = 400.0
offset_top = 246.2
offset_right = 775.0
offset_bottom = 422.2
theme_override_font_sizes/font_size = 60
text = "School"
horizontal_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Dialouge UI" parent="." instance=ExtResource("2_8ejwd")]
layout_mode = 1

[node name="Classroom" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 187.0
offset_right = 1132.0
offset_bottom = 270.0
texture_normal = ExtResource("4_o8ck7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Classroom"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -24.0
offset_right = 45.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "CLASSROOM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Secretary" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 300.0
offset_right = 1132.0
offset_bottom = 383.0
texture_normal = ExtResource("4_o8ck7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Secretary"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -24.0
offset_right = 45.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "SECRETARY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Professor" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 400.0
offset_right = 1132.0
offset_bottom = 483.0
texture_normal = ExtResource("4_o8ck7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Professor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -17.5
offset_right = 48.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
text = "PROFESSOR
"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 161

[node name="City" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 239.0
offset_right = 216.0
offset_bottom = 322.0
texture_normal = ExtResource("4_o8ck7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="City"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -24.0
offset_right = 45.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "CITY"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Classroom" to="." method="_on_classroom_pressed"]
[connection signal="pressed" from="Secretary" to="." method="_on_secretary_pressed"]
[connection signal="pressed" from="Professor" to="." method="_on_professor_pressed"]
[connection signal="pressed" from="City" to="." method="_on_city_pressed"]
